alignn_feature_dataset_prep

--- a/alignn/alignn_feature_extraction/alignn_feature_dataset_prep.ipynb
+++ b/alignn/alignn_feature_extraction/alignn_feature_dataset_prep.ipynb
@@ -616,7 +616,7 @@
     "    task.load()\n",
     "    for ii, fold in enumerate(task.folds):\n",
     "        train_df = task.get_train_and_val_data(fold, as_type=\"df\")\n",
-    "        test_df = task.get_train_and_val_data(fold, as_type=\"df\")        \n",
+    "        test_df = task.get_test_data(fold, as_type=\"df\")        \n",
     "        val_df = train_df[0: len(test_df)]\n",
     "        \n",
     "        train_ids, val_ids, test_ids = list(train_df.index), list(val_df.index), list(test_df.index)\n",
